<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView_first_emoji"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:contentDescription="@string/first_image"
        app:srcCompat="@drawable/bomb" />

    <ImageView
        android:id="@+id/imageView_second_emoji"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:contentDescription="@string/second_image"
        app:srcCompat="@drawable/dollar" />

    <ImageView
        android:id="@+id/imageView_third_emoji"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:contentDescription="@string/third_image"
        app:srcCompat="@drawable/cherry" />
</LinearLayout>