<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


    <TextView
        android:id="@+id/textViewCurrentCoins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/you_have_s_coins"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_slots_machine_space" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        android:text="@string/bet"
        android:textSize="20sp"
        android:onClick="onClickBetMoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrentCoins" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_slots_machine_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.56"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_slots_machine_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ListView
            android:id="@+id/list_view_first_row"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:id="@+id/view"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/primary" />

        <ListView
            android:id="@+id/list_view_second_row"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <View
            android:id="@+id/view2"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/primary" />


        <ListView
            android:id="@+id/list_view_third_row"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


        <View
            android:id="@+id/view3"
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/primary" />

    </LinearLayout>

    <View
        android:layout_width="3dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout"
        android:background="@color/primary"/>


    <View
        android:layout_width="0dp"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_slots_machine_space"
        android:background="@color/primary"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onClickSpinCasino"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@drawable/spin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/spin"
        android:gravity="end"
        android:textSize="30sp"
        android:onClick="onClickSpinCasino"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>